# Auth/Controllers/DeauthenticationController.cs
@@ -1,12 +1,14 @@
-﻿using System.Net.Mime;
-using JinCreek.Server.Common.Repositories;
+﻿using JinCreek.Server.Common.Repositories;
 using JinCreek.Server.Interfaces;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
+using NSwag.Annotations;
+using System.Net.Mime;
 
 namespace JinCreek.Server.Auth.Controllers
 {
+    [OpenApiTag("認証解除", Description = "認証解除を行う。")]
     [Consumes(MediaTypeNames.Application.Json)]
     [Produces(MediaTypeNames.Application.Json)]
     [Route("api/deauthentication")]
@@ -30,9 +32,8 @@ namespace JinCreek.Server.Auth.Controllers
 
 
         [HttpPost]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesErrorResponseType(typeof(ErrorResponse))]
+        [SwaggerResponse(StatusCodes.Status200OK, typeof(void), Description = "認証解除成功")]
+        [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ValidationProblemDetails), Description = "リクエスト内容不正")]
         public IActionResult Deauthentication(DeauthenticationRequest deauthenticationRequest)
         {
             return Ok();
