# Auth/Controllers/MultiFactorAuthenticationController.cs
@@ -8,6 +8,7 @@ using System.Net.Mime;
 
 namespace JinCreek.Server.Auth.Controllers
 {
+    [OpenApiTag("多要素認証", Description = "多要素認証を行う。成功時はユーザーに関わるサーバー側に保持する動的な設定項目を返却する。")]
     [Consumes(MediaTypeNames.Application.Json)]
     [Produces(MediaTypeNames.Application.Json)]
     [Route("api/multi_factor/authentication")]
@@ -31,8 +32,9 @@ namespace JinCreek.Server.Auth.Controllers
 
 
         [HttpPost]
-        [SwaggerResponse(StatusCodes.Status200OK, typeof(MultiFactorAuthenticationResponse))]
-        [SwaggerResponse(StatusCodes.Status401Unauthorized, typeof(ErrorResponse))]
+        [SwaggerResponse(StatusCodes.Status200OK, typeof(MultiFactorAuthenticationResponse), Description = "認証成功")]
+        [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ValidationProblemDetails), Description = "リクエスト内容不正")]
+        [SwaggerResponse(StatusCodes.Status401Unauthorized, typeof(ErrorResponse), Description = "認証失敗")]
         public IActionResult Authentication(MultiFactorAuthenticationRequest multiFactorAuthenticationRequest)
         {
             _logger.LogDebug("hello");
