# Auth/Controllers/SimDeviceAuthenticationController.cs
@@ -15,6 +15,7 @@ using static JinCreek.Server.Interfaces.ErrorResponse;
 
 namespace JinCreek.Server.Auth.Controllers
 {
+    [OpenApiTag("SIM＆端末認証", Description = "SIM＆端末認証を行う。成功時はログイン可能ユーザ一覧、クライアント(デバイスやSIM)機器に関わるサーバー側に保持する動的な設定項目を返却する。")]
     [Consumes(MediaTypeNames.Application.Json)]
     [Produces(MediaTypeNames.Application.Json)]
     [Route("api/sim_device/authentication")]
@@ -42,8 +43,9 @@ namespace JinCreek.Server.Auth.Controllers
        
 
         [HttpPost]
-        [SwaggerResponse(StatusCodes.Status200OK, typeof(SimDeviceAuthenticationResponse))]
-        [SwaggerResponse(StatusCodes.Status401Unauthorized, typeof(ErrorResponse))]
+        [SwaggerResponse(StatusCodes.Status200OK, typeof(SimDeviceAuthenticationResponse), Description = "認証成功")]
+        [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ValidationProblemDetails), Description = "リクエスト内容不正")]
+        [SwaggerResponse(StatusCodes.Status401Unauthorized, typeof(ErrorResponse), Description = "認証失敗")]
         public IActionResult Authentication(SimDeviceAuthenticationRequest simDeviceAuthenticationRequest)
         {
             _logger.LogDebug("hello");
